fix: do not overlap end day button with QuickSelect

--- a/src/components/QuickSelect/QuickSelect.sass
+++ b/src/components/QuickSelect/QuickSelect.sass
@@ -24,6 +24,7 @@
   @media (orientation: landscape) and (max-height: #{$break-large-phone})
     bottom: auto
     top: 5em
+    max-width: calc(100% - 12em)
 
     .menu-open &
       display: none
